# pipelines

./: .aider.chat.history.md  .aider.input.history  .gitignore  .webui_secret_key  pyproject.toml
.aider.tags.cache.v3/: cache.db-shm  cache.db-wal
examples/pipelines/providers/: openrouter_manifold_pipeline.py
