[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.5",
    "anthropic>=0.37.1",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.48",
    "chromadb>=0.5.15",
    "ddtrace>=2.14.4",
    "fastapi==0.111.0",
    "google-generativeai>=0.8.3",
    "grpcio>=1.67.0",
    "httpx>=0.27.2",
    "langfuse>=2.52.2",
    "llama-index>=0.11.19",
    "llama-index-llms-ollama>=0.3.4",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openai>=1.52.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "passlib[bcrypt]==1.7.4",
    "peewee>=3.17.7",
    "pillow>=11.0.0",
    "playwright>=1.48.0",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.7.1",
    "pyjwt[crypto]>=2.9.0",
    "pymongo>=4.10.1",
    "python-multipart==0.0.9",
    "python-socketio>=5.11.4",
    "redis>=5.2.0",
    "requests==2.32.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "selenium>=4.25.0",
    "sentence-transformers>=3.2.1",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.8.0",
    "tokenizers>=0.20.1",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "uvicorn[standard]==0.22.0",
    "vertexai>=1.70.0",
    "xgboost>=2.1.2",
]
